src/styles/header.css
.header {
    background: url('../resources/background-image.png') no-repeat;
    background-size: cover;
   
    height: 15rem;
    
    display: flex;
    justify-content: center;
    align-items: baseline;
}

.header > .title {
    font-weight: 600;
    
    color: var(--color-white);
}

.header > .title > .itens-count {
    background-color: var(--color-text);
    
    margin-left: .5rem;

    font-size: .9rem;
    
    padding: .4rem .8rem;
    
    border-radius: 1rem;
}

